# shute

./: Cargo.toml  LICENSE  README.md
benches/: bench_main.rs
benches/benchmarks/: io.rs  mod.rs
benches/benchmarks/powers/: mod.rs  powers.wgsl
benches/benchmarks/shortcut/: mod.rs  shortcut.wgsl
benches/benchmarks/shortcut_v0/: mod.rs  shortcut.wgsl
benches/benchmarks/shortcut_v1/: mod.rs  shortcut.wgsl
benches/benchmarks/shortcut_v2/: mod.rs  shortcut.wgsl
examples/about_device/: main.rs
examples/collatz/: collatz.wgsl  main.rs
examples/doubler/: README.md  main.rs
examples/doubler/shaders/: doubler.wgsl
examples/reduction_v0/: main.rs  reduction.wgsl
examples/shortcut/: main.rs  shortcut.wgsl
examples/shortcut_blocks/: main.rs
examples/shortcut_v0/: main.rs  shortcut.wgsl
examples/shortcut_v1/: main.rs  shortcut.wgsl
examples/shortcut_v2/: main.rs  padding-opt.spv  padding.spv  padding.wgsl  shortcut-opt.spv  shortcut.spv  shortcut.wgsl
examples/shortcut_v2-0/: main.rs
examples/shortcut_v2-1/: shortcut.wgsl
examples/shortcut_v3/: cpu_v6.rs  main.rs  shortcut.wgsl
examples/square/: main.rs  square.wgsl
shute_macros/: Cargo.toml
shute_macros/src/: lib.rs
src/: buffer.rs  device.rs  instance.rs  lib.rs  main.rs  types.rs
