[package]
name = "shute"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Abstraction of wgpu for simple compute shader execution"
repository = "https://github.com/shzhe02/shute"
readme = "README.md"
keywords = ["gpgpu", "compute"]
categories = []

[dependencies]
encase = "0.10.0"
flume = "0.11.1"
pollster = "0.4.0"
wgpu = "23.0.0"

[dev-dependencies]
atomic_float = "1.1.0"
criterion = "0.5.1"
rand = "0.8.5"
rayon = "1.10.0"

[[bench]]
name = "bench_main"
harness = false
